@@ -1,3 +1,8 @@
+2009-10-22  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/template/Makefile.ex (maintainer-clean): New.
+	Add comments to all *clean targets.
+
 2009-09-30  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/lib/cygbuild.pl (Help): Work around Perl bug in
